# sumario-mirror

./: .gitlab-ci.yml  Containerfile.builder  Containerfile.release  Makefile  README.md  sumario-backend.toml
.bin/: fly
sumario/: .coveragerc  .gitignore  MANIFEST.in  Makefile  babel.cfg  pyproject.toml  pytest.ini
sumario/src/sumario/: __init__.py  app.py  callbacks.py  forms.py  messages.pot  models.py
sumario/src/sumario/blueprints/: account.py  dashboard.py  help.py  homepage.py  submission.py
sumario/src/sumario/components/: __init__.py  babel.py  hashedassets.py  mail.py  sentry.py  stripe.py  users.py
sumario/src/sumario/settings/: common.py  testing.py
sumario/src/sumario/static/: .gitignore  Makefile
sumario/src/sumario/static/src/css/: sumario.css
sumario/src/sumario/static/src/js/: libsumario.js  sumario.js
sumario/src/sumario/templates/: flask-user.html
sumario/src/sumario/templates/flask_user/: _macros.html  change_password.html  forgot_password.html  login.html  public_base.html  register.html  resend_confirm_email.html  reset_password.html
sumario/src/sumario/templates/sumario/: account.html  dashboard-0.html  dashboard-edit.html  dashboard-n.html  form.html  help.html  homepage.html  nocredits.html  submission.html  submission.txt  success.html  sumario.html  with-menubar.html
sumario/tests/: helpers.py  test_forms.py  test_models.py
sumario/tests/blueprints/: test_account.py  test_dashboard.py  test_help.py  test_homepage.py  test_submission.py
sumario/tests/components/: test_hashedassets.py
traefik/: traefik.toml
(+16 files in other folders)
